--- a/src/assets/css/login_style.css
+++ b/src/assets/css/login_style.css
@@ -1,97 +1,160 @@
 .login-block {
-    background: #de6262; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to bottom,
+  background: #de6262;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom,
       #ffb88c,
-      #de6262
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to bottom,
+      #de6262);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom,
       #ffb88c,
-      #de6262
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    float: left;
-    width: 100%;
-    padding: 50px 0;
-  }
-  .banner-sec {
-    background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg)
-      no-repeat left bottom;
-    background-size: cover;
-    min-height: 500px;
-    border-radius: 10px 0px 0px 10px;
-    padding: 0;
-  }
-  .container {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
-  }
-  .carousel-inner {
-    border-radius: 10px 0px 0px 10px;
-  }
-  .carousel-caption {
-    text-align: left;
-    left: 5%;
-  }
-  .login-sec {
-    padding: 50px 30px;
-    position: relative;
-  }
-  .login-sec .copy-text {
-    position: absolute;
-    width: 80%;
-    bottom: 20px;
-    font-size: 13px;
-    text-align: center;
-  }
-  .login-sec .copy-text i {
-    color: #feb58a;
-  }
-  .login-sec .copy-text a {
-    color: #e36262;
-  }
-  .login-sec h2 {
-    margin-bottom: 30px;
-    font-weight: 800;
-    font-size: 30px;
-    color: #de6262;
-  }
-  .login-sec h2:after {
-    content: " ";
-    width: 100px;
-    height: 5px;
-    background: #feb58a;
-    display: block;
-    margin-top: 20px;
-    border-radius: 3px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .btn-login {
-    background: #de6262;
-    color: #fff;
-    font-weight: 600;
-  }
-  .banner-text {
-    width: 70%;
-    position: absolute;
-    bottom: 40px;
-    padding-left: 20px;
-  }
-  .banner-text h2 {
-    color: #fff;
-    font-weight: 600;
-  }
-  .banner-text h2:after {
-    content: " ";
-    width: 100px;
-    height: 5px;
-    background: #fff;
-    display: block;
-    margin-top: 20px;
-    border-radius: 3px;
-  }
-  .banner-text p {
-    color: #fff;
-  }
+      #de6262);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  float: left;
+  width: 100%;
+  padding: 50px 0;
+}
+
+.banner-sec {
+  background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
+  background-size: cover;
+  min-height: 500px;
+  border-radius: 10px 0px 0px 10px;
+  padding: 0;
+}
+
+.container {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-inner {
+  border-radius: 10px 0px 0px 10px;
+}
+
+.carousel-caption {
+  text-align: left;
+  left: 5%;
+}
+
+.login-sec {
+  padding: 50px 30px;
+  position: relative;
+}
+
+.login-sec .copy-text {
+  position: absolute;
+  width: 80%;
+  bottom: 20px;
+  font-size: 13px;
+  text-align: center;
+}
+
+.login-sec .copy-text i {
+  color: #feb58a;
+}
+
+.login-sec .copy-text a {
+  color: #e36262;
+}
+
+.login-sec h2 {
+  margin-bottom: 30px;
+  font-weight: 800;
+  font-size: 30px;
+  color: #de6262;
+}
+
+.login-sec h2:after {
+  content: " ";
+  width: 100px;
+  height: 5px;
+  background: #feb58a;
+  display: block;
+  margin-top: 20px;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-login {
+  background: #de6262;
+  color: #fff;
+  font-weight: 600;
+  float:right;
+}
+
+.banner-text {
+  width: 70%;
+  position: absolute;
+  bottom: 40px;
+  padding-left: 20px;
+}
+
+.banner-text h2 {
+  color: #fff;
+  font-weight: 600;
+}
+
+.banner-text h2:after {
+  content: " ";
+  width: 100px;
+  height: 5px;
+  background: #fff;
+  display: block;
+  margin-top: 20px;
+  border-radius: 3px;
+}
+
+.banner-text p {
+  color: #fff;
+}
+
+p.dialogMessage {
+  font-size: 10px;
+  background: #de6262;
+}
+
+.remember-me{
+  float: left;
+  margin-left: 40px;
+}
+
+/* Registration Style */
+
+.regis-sec {
+  padding: 30px 50px;
+  position: relative;
+  background-color: rgb(176, 218, 255);
+  margin: 0 auto;
+  margin-top: 30px;
+  border-radius: 30px;
+}
+
+.regis-sec h2 {
+  margin-bottom: 30px;
+  font-weight: 800;
+  font-size: 30px;
+  color: #854ce7;;
+}
+
+.regis-sec h2:after {
+  content: " ";
+  width: 100px;
+  height: 5px;
+  background: #854ce7;;
+  display: block;
+  margin-top: 20px;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-regis {
+  display: flex;
+  margin: 30px auto;
+  width: 90%;
+  background: #07af01;
+  color: #fff;
+  font-weight: 600;
+}
